--- a/resume.html
+++ b/resume.html
@@ -29,4 +29,11 @@
             <a class="nav-link active" aria-current="page" href="resume.html">Resume</a>
         </li>
         <li class="nav-item">
-            
+            <a class="nav-link" href="contactme.html">Contact Me</a>
+        </li>
+    </div>
+  </div>
+</nav>
+</main>
+</body>
+</html>
