--- a/newsletters.html
+++ b/newsletters.html
@@ -34,4 +34,22 @@
           <div class="card-body"><h3 class="card-title">September</h3></div>
         </a>
         <a href="pdfs/OctoberNewsletter.pdf" class="card" target="_blank">
-       
+          <div class="card-body"><h3 class="card-title">October</h3></div>
+        </a>
+        <a href="pdfs/Novembernewsletter.pdf" class="card" target="_blank">
+          <div class="card-body"><h3 class="card-title">November</h3></div>
+        </a>
+        <a href="pdfs/DecemberNewsletter.pdf" class="card" target="_blank">
+          <div class="card-body"><h3 class="card-title">December</h3></div>
+        </a>
+        <a href="pdfs/January.pdf" class="card" target="_blank">
+          <div class="card-body"><h3 class="card-title">January</h3></div>
+        </a>
+      </div>
+    </section>
+  
+    <footer>
+      <p>&copy; 2025 Julia</p>
+    </footer>
+  </body>
+  </html>
